--- a/neon/pom.xml
+++ b/neon/pom.xml
@@ -13,8 +13,7 @@ Contributors:
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-
-	<artifactId>mars</artifactId>
+	<artifactId>neon</artifactId>
 	<packaging>eclipse-target-definition</packaging>
 	<name>RCP Example Target Definition</name>
 
