--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,7 @@
 		<module>eclipse-repository</module>
 		<module>example-bundle</module>
 		<module>example-feature</module>
-		
-		
-		
-		
+		<module>neon</module>
 	</modules>
 
 	<build>
@@ -40,7 +37,7 @@
 					<target>
 						<artifact>
 							<groupId>example.group</groupId>
-							<artifactId>mars</artifactId>
+							<artifactId>neon</artifactId>
 							<version>1.0.0-SNAPSHOT</version>
 						</artifact>
 					</target>
